# mara_x_home

./: README.md  pyproject.toml
backend/mqtt_host/: sensor_data.db
backend/mqtt_server/: mqtt_host.py
backend/temp_readout_prototype/: main.py  main_http.py
frontend/flask_fe/: server.py
frontend/flask_fe/templates/: index.html  index_with_plot.html  index_with_plot_bootstrap.html
frontend/reflex_fe/: rxconfig.py
frontend/reflex_fe/reflex_fe/: reflex_fe.py
